Add 'check_drivesize' as nscp-local check command
fixes #9130

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -88,3 +88,9 @@ object CheckCommand "nscp-local-version" {
 
 	vars.nscp_query = "check_version"
 }
+
+object CheckCommand "nscp-local-disk" {
+  import "nscp-local"
+
+  vars.nscp_query = "check_drivesize"
+}
