Terminate string literals

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -185,7 +185,7 @@ object CheckCommand "tcp" {
 			key = "-E"
 			order = 1
 			set_if = "$tcp_escape_send$"
-			description = "Enable usage of \n, \r, \t or \\ in send string.
+			description = "Enable usage of \n, \r, \t or \\ in send string."
 		}
 		"-s" = {
 			order = 2
@@ -196,7 +196,7 @@ object CheckCommand "tcp" {
 			key = "-E"
 			order = 3
 			set_if = "$tcp_escape_quit$"
-			description = "Enable usage of \n, \r, \t or \\ in quit string.
+			description = "Enable usage of \n, \r, \t or \\ in quit string."
 		}
 		"-q" = {
 			order = 4
