--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1334,6 +1334,38 @@ object CheckCommand "icmp" {
 	vars.icmp_cpl = 15
 }
 
+object CheckCommand "ldap" {
+    import "plugin-check-command"
+    import "ipv4-or-ipv6"
+
+	command = [
+		PluginDir + "/check_ldap",
+		"-H", "$ldap_address$",
+		"-b", "$ldap_base$"
+	]
+
+	arguments = {
+		"-p" = "$ldap_port$"
+		"-a" = "$ldap_attr$"
+		"-D" = "$ldap_bind$"
+		"-P" = "$ldap_pass$"
+		"-T" = {
+			set_if = "$ldap_starttls$"
+			description = "Use STARTTLS mechanism"
+		}
+		"-S" = {
+			set_if = "$ldap_ssl$"
+			description = "Use LDAPS. This also sets the default port to 636"
+		}
+		"-3" = {
+			set_if = "$ldap_v3$"
+			description = "Use LDAP protocol version 3"
+		}
+	}
+
+    vars.ldap_address = "$check_address$"
+}
+
 /* Contrib plugins */
 object CheckCommand "running_kernel" {
 	import "plugin-check-command"
