--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -50,3 +50,9 @@ object CheckCommand "mem" {
 	vars.mem_cache = false
 }
 
+object CheckCommand "running_kernel" {
+	import "plugin-check-command"
+
+	command = [ "sudo", PluginDir + "/check_running_kernel" ]
+}
+
