Add database CheckCommand definition for mongodb
fixes #9191

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -303,3 +303,83 @@ object CheckCommand "postgres" {
 	vars.postgres_production = false
 	vars.postgres_unixsocket = false
 }
+
+object CheckCommand "mongodb" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_mongodb.py" ]
+
+	arguments = {
+		"-H" = {
+			value = "$mongodb_address$"
+			description = "The hostname you want to connect to"
+		}
+		"-P" = {
+			value = "$mongodb_port$"
+			description = "The port mongodb is runnung on"
+		}
+		"-u" = {
+			value = "$mongodb_user$"
+			description = "The username you want to login as"
+		}
+		"-p" = {
+			value = "$mongodb_passwd$"
+			description = "The password you want to use for that user"
+		}
+		"-A" = {
+			value = "$mongodb_action$"
+			description = "The action you want to take"
+		}
+		"-c" = {
+			value = "$mongodb_collection$"
+			description = "Specify the collection to check"
+		}
+		"-T" = {
+			value = "$mongodb_sampletime$"
+			description = "Time used to sample number of pages faults"
+		}
+		"-q" = {
+			value = "$mongodb_querytype$"
+			description = "The query type to check [query|insert|update|delete|getmore|command] from queries_per_second"
+		}
+		"--database" = {
+			value = "$mongodb_database$"
+			description = "Specify the database to check"
+		}
+		"-D" = {
+			set_if = "$mongodb_perfdata$"
+			description = "Enable output of Nagios performance data"
+		}
+		"--max-lag" = {
+			set_if = "$mongodb_maxlag$"
+			description = "Get max replication lag (for replication_lag action only)"
+		}
+		"--mapped-memory" = {
+			set_if = "$mongodb_mappedmemory$"
+			description = "Get mapped memory instead of resident (if resident memory can not be read)"
+		}
+		"--ssl" = {
+			set_if = "$mongodb_ssl$"
+			description = "Connect using SSL"
+		}
+		"--replicaset" = {
+			set_if = "$mongodb_replicaset$"
+			description = "Connect to replicaset"
+		}
+		"--all-databases" = {
+			set_if = "$mongodb_alldatabases$"
+			description = "Check all databases (action database_size)"
+		}
+		"-C" = {
+			value = "$mongodb_critical$"
+			description = "The critical threshold we want to set"
+		}
+		"-W" = {
+			value = "$mongodb_warning$"
+			description = "The warning threshold we want to set"
+		}
+	}
+
+	vars.mongodb_perfdata = true
+	vars.mongodb_action = "connections"
+}
