Fix problem with option order of disk_wfree and disk_cfree
If using the -r/-R option with check_disk, the command  expects the
warning and critical threshold on the left side of its position.
With order = -3 will be moved to the first position of all options.

fixes #9161

Signed-off-by: Michael Friedrich <michael.friedrich@gmail.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -633,12 +633,14 @@ object CheckCommand "disk" {
 			value = "$disk_wfree$"
 			description = "Exit with WARNING status if less than INTEGER units of disk are free or Exit with WARNING status if less than PERCENT of disk space is free"
 			required = true
+			order = -3
 		}
 
 		"-c" = {
 			value = "$disk_cfree$"
 			description = "Exit with CRITICAL status if less than INTEGER units of disk are free or Exit with CRITCAL status if less than PERCENT of disk space is free"
 			required = true
+			order = -3
 		}
 
 		"-W" = {
