Fix incorrect variable name in the ITL
fixes #9253

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -131,8 +131,8 @@ object CheckCommand "perfmon-windows" {
 		}
 	}
 	
-	vars.performance-wait = "1000"
-	vars.fmt-countertype = "double"
+	vars.performance_win_wait = 1000
+	vars.perfmon_win_type = "double"
 	//The default values
 }
 
