Add 'disk_smb' Plugin CheckCommand definition
fixes #9254

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -775,6 +775,54 @@ object CheckCommand "disk" {
 	vars.disk_exclude_type = ["none", "tmpfs", "sysfs", "proc", "devtmpfs", "devfs", "mtmfs"]
 }
 
+object CheckCommand "disk_smb" {
+        import "plugin-check-command"
+
+        command = [ PluginDir + "/check_disk_smb" ]
+
+        arguments = {
+                "-H" = {
+                        value = "$disk_smb_hostname$"
+                        description = "NetBIOS name of the server."
+                }
+                "-s" = {
+                        value = "$disk_smb_share$"
+                        description = "Share name to be tested."
+                }
+                "-W" = {
+                        value = "$disk_smb_workgroup$"
+                        description = "Workgroup or Domain used (Defaults to 'WORKGROUP' if omitted)."
+                }
+                "-a" = {
+                        value = "$disk_smb_address$"
+                        description = "IP-address of HOST (only necessary if HOST is in another network)."
+                }
+                "-u" = {
+                        value = "$disk_smb_username$"
+                        description = "Username to log in to server. (Defaults to 'guest' if omitted)."
+                }
+                "-p" = {
+                        value = "$disk_smb_password$"
+                        description = "Password to log in to server. (Defaults to an empty password if omitted)."
+                }
+                "-w" = {
+                        value = "$disk_smb_wused$"
+                        description = "Percent of used space at which a warning will be generated (Default: 85%)."
+                }
+                "-c" = {
+                        value = "$disk_smb_cused$"
+                        description = "Percent of used space at which a critical will be generated (Defaults: 95%)"
+                }
+                "-P" = {
+                        value = "$disk_smb_port$"
+                        description = "Port to be used to connect to. Some Windows boxes use 139, others 445 (Defaults to smbclient default if omitted)."
+                }
+        }
+
+	vars.disk_smb_wused = "85%"
+	vars.disk_smb_cused = "95%"
+}
+
 object CheckCommand "users" {
 	import "plugin-check-command"
 
