Fix incorrect custom var names in the ITL
fixes #9258

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -183,7 +183,7 @@ object CheckCommand "ping4-windows" {
 
 	command += [ "-4" ]
 
-	vars.ping_address = "$address$"
+	vars.ping_win_address = "$address$"
 }
 
 object CheckCommand "ping6-windows" {
@@ -191,7 +191,7 @@ object CheckCommand "ping6-windows" {
 
 	command += [ "-6" ]
 
-	vars.ping_address = "$address6$"
+	vars.ping_win_address = "$address6$"
 }
 
 object CheckCommand "procs-windows" {
