--- a/etc/icinga2/conf.d/win32/services.conf
+++ b/etc/icinga2/conf.d/win32/services.conf
@@ -39,6 +39,22 @@ apply Service "ping6" {
   assign where host.address6
 }
 
+apply Service for (disk => config in host.vars.disks) {
+  import "generic-service"
+
+  check_command = "disk-windows"
+
+  vars += config
+}
+
+apply Service "icinga" {
+  import "generic-service"
+
+  check_command = "icinga"
+
+  assign where host.name == NodeName
+}
+
 apply Service "load" {
   import "generic-service"
 
