Include <nscp> in the default Windows config
fixes #9260

--- a/etc/icinga2/win32/icinga2.conf
+++ b/etc/icinga2/win32/icinga2.conf
@@ -28,11 +28,14 @@ include <plugins>
 // include <plugins-contrib>
 
 /**
- * This includes the Icinga 2 Windows plugins
+ * This includes the Icinga 2 Windows plugins.
  */
 include <windows-plugins>
 
-
+/**
+ * This includes the NSClient++ check commands.
+ */
+include <nscp>
 
 /**
  * The features-available directory contains a number of configuration
