Add the --load-all and --log options for nscp-local
fixes #9261

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -27,6 +27,8 @@ object CheckCommand "nscp-local" {
 	command = [ NscpPath, "client" ]
 
 	arguments = {
+		"--log" = "$nscp_log_level$"
+		"--load-all" = { set_if ="$nscp_load_all$" }
 		"-q" = {
 			value = "$nscp_query$"
 			required = true
@@ -38,6 +40,8 @@ object CheckCommand "nscp-local" {
 	}
 
 	vars.nscp_path = {{ NscpPath }}
+	vars.nscp_log_level = "critical"
+	vars.nscp_load_all = true
 	vars.nscp_boot = true
 }
 
