--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -18,13 +18,13 @@
  ******************************************************************************/
 
 if (!globals.contains("NscpPath")) {
-	NscpPath = msi_get_component_path("{5C45463A-4AE9-4325-96DB-6E239C034F93}")
+	NscpPath = dirname(msi_get_component_path("{5C45463A-4AE9-4325-96DB-6E239C034F93}"))
 }
 
 object CheckCommand "nscp-local" {
 	import  "plugin-check-command"
 
-	command = [ NscpPath, "client" ]
+	command = [ "$nscp_path$\\nscp.exe", "client" ]
 
 	arguments = {
 		"--log" = "$nscp_log_level$"
