Add 'iftraffic' to plugins-contrib check command definitions
fixes #9272

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -292,3 +292,50 @@ object CheckCommand "interfacetable" {
 	vars.interfacetable_notype = false
 }
 
+object CheckCommand "iftraffic" {
+	import "plugin-check-command"
+	command = [ PluginDir + "/check_iftraffic64.pl"]
+
+	arguments = {
+		"-H" = {
+			value = "$iftraffic_address$"
+			description = "Check interface on the indicated host."
+			required = true
+		}
+		"-C" = {
+			value = "$iftraffic_community$"
+			description = "SNMP community. Defaults to 'public' if omitted."
+		}
+		"-i" = {
+			value = "$iftraffic_interface$"
+			description = "Interface name."
+			required = true
+		}
+		"-b" = {
+			value = "$iftraffic_bandwidth$"
+			description = "Interface maximum speed in kilo/mega/giga/bits per second."
+			required = true
+		}
+		"-u" = {
+			value = "$iftraffic_units$"
+			description = "g=gigabits/s,m=megabits/s,k=kilobits/s,b=bits/s."
+		}
+		"-w" = {
+			value = "$iftraffic_warn$"
+			description = "% of bandwidth usage necessary to result in warning status (default: 85%)"
+		}
+		"-c" = {
+			value = "$iftraffic_crit$"
+			description = "% of bandwidth usage necessary to result in critical status (default: 98%)"
+		}
+		"-M" = {
+			value = "$iftraffic_max_counter$"
+			description = "Max counter value of net devices in kilo/mega/giga/bytes."
+		}
+	}
+
+	vars.iftraffic_address = "$address$"
+	vars.iftraffic_warn = "85%"
+	vars.iftraffic_crit = "98%"
+}
+
