Fix missing IPv6 support in 'iftraffic' check command
refs #9272

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -294,6 +294,8 @@ object CheckCommand "interfacetable" {
 
 object CheckCommand "iftraffic" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
 	command = [ PluginDir + "/check_iftraffic64.pl"]
 
 	arguments = {
@@ -334,7 +336,7 @@ object CheckCommand "iftraffic" {
 		}
 	}
 
-	vars.iftraffic_address = "$address$"
+	vars.iftraffic_address = "$check_address$"
 	vars.iftraffic_warn = "85%"
 	vars.iftraffic_crit = "98%"
 }
