Add 'snmp_is_cisco' to Manubulon snmp-memory command definition
The new var 'snmp_is_cisco' was added to snmp-memory check
for use the correct OID with cisco switches. The default
is 'false'.

fixes #9303

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -110,11 +110,16 @@ object CheckCommand "snmp-memory" {
 		"-f" = {
 			set_if = "$snmp_perf$"
 		}
+		"-I" = {
+			set_if = "$snmp_is_cisco$"
+			description = "check cisco memory (sum of all memory pools)"
+		}
 	}
 
 	vars.snmp_warn = "94,50"
 	vars.snmp_crit = "98,80"
 	vars.snmp_perf = true
+	vars.snmp_is_cisco = false
 }
 
 
