Fix wrong argument for mssql plugin check command
fixes #9372

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -67,8 +67,8 @@ object CheckCommand "mssql_health" {
 			value = "$mssql_health_name2$"
 			description = "if name is a sql statement, name2 can be used to appear in the output and the performance data"
 		}
-		"--regexep" = {
-			set_if = "$mssql_health_regexep$"
+		"--regexp" = {
+			set_if = "$mssql_health_regexp$"
 			description = "name will be interpreted as a regular expression"
 		}
 		"--units" = {
@@ -85,7 +85,7 @@ object CheckCommand "mssql_health" {
 		}
 	}
 
-	vars.mssql_health_regexep = false
+	vars.mssql_health_regexp = false
 	vars.mssql_health_offlineok = false
 	vars.mssql_health_commit = false
 }
@@ -192,8 +192,8 @@ object CheckCommand "oracle_health" {
 			value = "$oracle_health_name2$"
 			description = "if name is a sql statement, name2 can be used to appear in the output and the performance data"
 		}
-		"--regexep" = {
-			set_if = "$oracle_health_regexep$"
+		"--regexp" = {
+			set_if = "$oracle_health_regexp$"
 			description = "name will be interpreted as a regular expression"
 		}
 		"--units" = {
@@ -219,7 +219,7 @@ object CheckCommand "oracle_health" {
 		"TNS_ADMIN" = "$oracle_tns_admin$"
 	}
 
-	vars.oracle_health_regexep = false
+	vars.oracle_health_regexp = false
 	vars.oracle_health_ident = false
 	vars.oracle_health_commit = false
 	vars.oracle_health_noperfdata = false
