Fix wrong check parameter in 'tcp' CheckCommand
refs #9147

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -174,7 +174,7 @@ object CheckCommand "tcp" {
 			description = "The TCP port number."
 		}
 		"-e" = {
-			value = "$ftp_expect$"
+			value = "$tcp_expect$"
 			description = "String to expect in server response (may be repeated)."
 		}
 		"-A" = {
