--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -383,3 +383,39 @@ object CheckCommand "mongodb" {
 	vars.mongodb_perfdata = true
 	vars.mongodb_action = "connections"
 }
+
+object CheckCommand "elasticsearch" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_elasticsearch" ]
+
+	arguments = {
+		"--failure-domain" = {
+			value = "$elasticsearch_failuredomain$"
+			description = "A comma-separated list of ElasticSearch attributes that make up your cluster's failure domain"
+		}
+		"--host" = {
+			value = "$elasticsearch_host$"
+			description = "Hostname or network address to probe, defaults to 'localhost'"
+		}
+		"--master-nodes" = {
+			value = "$elasticsearch_masternodes$"
+			description = "Issue a warning if the number of master-eligible nodes in the cluster drops below this number. By default, do not monitor the number of nodes in the cluster"
+		}
+		"--port" = {
+			value = "$elasticsearch_port$"
+			description = "TCP port to probe, defaults to 9200"
+		}
+		"--prefix" = {
+			value = "$elasticsearch_prefix$"
+			description = "Optional prefix for the ElasticSearch API, defaults to ''"
+		}
+		"--yellow-critical" = {
+			value = "TRUE"
+			set_if = "$elasticsearch_yellowcritical$"
+			description = "Instead of issuing a 'warning' for a yellow cluster state, issue a 'critical' alert"
+		}
+	}
+
+	vars.elasticsearch_yellowcritical = false
+}
