Fix incorrect validator for command arguments
fixes #9436

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -212,6 +212,7 @@
 	},
 	%attribute %dictionary "arguments" {
 		%attribute %string "*",
+		%attribute %function "*",
 		%attribute %dictionary "*" {
 			%attribute %string "key"
 			%attribute %string "value"
