Fix wrong nscp path w/ command_endpoint runtime macros
Do not allow to override the nscp path by runtime macros.
This causes the (linux) master to send just "." as $nscp_path$
and the windows client ignores the local global constant NscpPath
being overridden by the master.

Only happens with command_endpoints where runtime macros are passed
from the master to the clients.

fixes #9456

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -24,7 +24,7 @@ if (!globals.contains("NscpPath")) {
 object CheckCommand "nscp-local" {
 	import  "plugin-check-command"
 
-	command = [ "$nscp_path$\\nscp.exe", "client" ]
+	command = [ NscpPath + "\\nscp.exe", "client" ]
 
 	arguments = {
 		"--log" = "$nscp_log_level$"
@@ -39,7 +39,6 @@ object CheckCommand "nscp-local" {
 		"-a" = "$nscp_arguments$"
 	}
 
-	vars.nscp_path = {{ NscpPath }}
 	vars.nscp_log_level = "critical"
 	vars.nscp_load_all = true
 	vars.nscp_boot = true
