Use PluginContribDir in itl/plugins-contrib.d/*
fixes #9513

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -20,7 +20,7 @@
 object CheckCommand "mssql_health" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_mssql_health" ]
+	command = [ PluginContribDir + "/check_mssql_health" ]
 
 	arguments = {
 		"--hostname" = {
@@ -94,7 +94,7 @@ object CheckCommand "mysql_health" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_mysql_health" ]
+	command = [ PluginContribDir + "/check_mysql_health" ]
 
 	arguments = {
 		"--hostname" = {
@@ -157,7 +157,7 @@ object CheckCommand "mysql_health" {
 object CheckCommand "oracle_health" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_oracle_health" ]
+	command = [ PluginContribDir + "/check_oracle_health" ]
 
 	arguments = {
 		"--connect" = {
@@ -232,7 +232,7 @@ object CheckCommand "postgres" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_postgres.pl" ]
+	command = [ PluginContribDir + "/check_postgres.pl" ]
 
 	arguments = {
 		"-H" = {
@@ -307,7 +307,7 @@ object CheckCommand "postgres" {
 object CheckCommand "mongodb" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_mongodb.py" ]
+	command = [ PluginContribDir + "/check_mongodb.py" ]
 
 	arguments = {
 		"-H" = {
@@ -387,7 +387,7 @@ object CheckCommand "mongodb" {
 object CheckCommand "elasticsearch" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_elasticsearch" ]
+	command = [ PluginContribDir + "/check_elasticsearch" ]
 
 	arguments = {
 		"--failure-domain" = {
