--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -296,7 +296,7 @@ object CheckCommand "iftraffic" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_iftraffic64.pl"]
+	command = [ PluginContribDir + "/check_iftraffic64.pl"]
 
 	arguments = {
 		"-H" = {
