--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -53,6 +53,6 @@ object CheckCommand "mem" {
 object CheckCommand "running_kernel" {
 	import "plugin-check-command"
 
-	command = [ "sudo", PluginDir + "/check_running_kernel" ]
+	command = [ "sudo", PluginContribDir + "/check_running_kernel" ]
 }
 
