--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -20,7 +20,7 @@
 object CheckCommand "webinject" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_webinject" ]
+	command = [ PluginContribDir + "/check_webinject" ]
 
 	arguments = {
 		"-c" = {
