ITL: Add CheckCommand ntp_peer
fixes #9523

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -604,6 +604,29 @@ object CheckCommand "ntp_time" {
 	vars.ntp_address = "$check_address$"
 }
 
+object CheckCommand "ntp_peer" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginDir + "/check_ntp_peer" ]
+
+	arguments = {
+		"-H" = "$ntp_address$"
+		"-p" = "$ntp_port$"
+		"-w" = "$ntp_warning$"
+		"-c" = "$ntp_critical$"
+		"-W" = "$ntp_wstratum$"
+		"-C" = "$ntp_cstratum$"
+		"-j" = "$ntp_wjitter$"
+		"-k" = "$ntp_cjitter$"
+		"-m" = "$ntp_wsource$"
+		"-n" = "$ntp_csource$"
+		"-t" = "$ntp_timeout$"
+	}
+
+	vars.ntp_address = "$check_address$"
+}
+
 object CheckCommand "ssh" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
