ITL: Add missing options to 'ntp_time' CheckCommand
fixes #9562

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -599,6 +599,12 @@ object CheckCommand "ntp_time" {
 
 	arguments = {
 		"-H" = "$ntp_address$"
+		"-p" = "$ntp_port$"
+		"-q" = "$ntp_quit$"
+		"-w" = "$ntp_warning$"
+		"-c" = "$ntp_critical$"
+		"-o" = "$ntp_timeoffset$"
+		"-t" = "$ntp_timeout$"
 	}
 
 	vars.ntp_address = "$check_address$"
