ITL: Add missing 'smtp' CheckCommand parameters
fixes #9578

Signed-off-by: Michael Friedrich <michael.friedrich@gmail.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -517,6 +517,19 @@ object CheckCommand "smtp" {
 		"-H" = "$smtp_address$"
 		"-p" = "$smtp_port$"
 		"-f" = "$smtp_mail_from$"
+		"-e" = "$smtp_expect$"
+		"-C" = "$smtp_command$"
+		"-R" = "$smtp_response$"
+		"-F" = "$smtp_helo_fqdn$"
+		"-D" = "$smtp_certificate_age$"
+		"-S" = "$smtp_starttls$"
+		"-A" = "$smtp_authtype$"
+		"-U" = "$smtp_authuser$"
+		"-P" = "$smtp_authpass$"
+		"-q" = "$smtp_ignore_quit$"
+		"-w" = "$smtp_warning$"
+		"-c" = "$smtp_critical$"
+		"-t" = "$smtp_timeout$"
 	}
 
 	vars.smtp_address = "$check_address$"
